--- a/template.qmd
+++ b/template.qmd
@@ -1,16 +1,28 @@
 ---
-title: Untitled
-format:
-  test-revealjs: default
-author: nathenbyford
-date: last-modified
+title: 'Title'
+date: ''
+format: 
+  revealjs:
+    footer: 'Author'
 ---
 
-## Introduction
+## Quarto
 
-*TODO* Create an example file that demonstrates the formatting and features of your format.
+Quarto enables you to weave together content and executable code into a finished presentation. To learn more about Quarto presentations see <https://quarto.org/docs/presentations/>.
 
-## More Information
+## Bullets
 
-You can learn more about controlling the appearance of RevealJS output here: <https://quarto.org/docs/presentations/revealjs/>
+When you click the **Render** button a document will be generated that includes:
 
+-   Content authored with markdown
+-   Output from executable code
+
+# Code
+
+## Basic code
+
+When you click the **Render** button a presentation will be generated that includes both content and the output of embedded code. You can embed code like this:
+
+```{r}
+1 + 1
+```
